Revision history for {{$dist->name}}

{{$NEXT}}

0.0.4.1   2011-09-20 12:03:49 Europe/London
 - Tweak %-age limits used in tests

0.0.3     2011-08-08 20:05:29 Europe/London

 - add missing build dependency for Test::UseAllModules [RT#70125]

0.0.2     2011-08-07 22:55:47 Europe/London

 - Add memory_stack_ok() and update tests
 - Add missing prereq for Test::Most
 - POD layout tweaks
 - dzil.ini setup tweaks

0.0.1     2011-08-01 15:37:46 Europe/London

 - initial release