@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - add "author's notes"
 
 0.0.4.1   2011-09-20 12:03:49 Europe/London
  - Tweak %-age limits used in tests
